2001-08-20  Sam Steingold  <sds@gnu.org>

	* loadform.lisp (mlf-unquote, mlf-init-function): new functions
	(make-init-form): warn about errors in MLF-INIT-FUNCTION

2001-08-20  Sam Steingold  <sds@gnu.org>

	* places.lisp (setf-symbol): intern the result when the argument
	is interned

2001-08-05  Bruno Haible  <haible@clisp.cons.org>

	* constsym.d: Reorder according to the definition order in the files.

2001-08-05  Bruno Haible  <haible@clisp.cons.org>

	* win32.d: Test __MINGW32__, not __mingw32__.

2001-08-18  Sam Steingold  <sds@gnu.org>

	* loadform.lisp (make-load-form-saving-slots): compute the slot
	list differently for STANDARD-OBJECTs and STRUCTURE-OBJECTs;
	quote slot values

2001-08-17  Sam Steingold  <sds@gnu.org>

	implemented the ANSI CL pretty-printer
	* constobj.d (version): bumped
	(type_pprint_newline, type_pprint_indent): added
	* constsym.d (PPRINT-DISPATCH, PPRINT-INDENT, PPRINT-NEWLINE,
	%PPRINT-LOGICAL-BLOCK, :MISER-WIDTH, :PPRINT-DISPATCH, :LINEAR,
	:FILL, :MISER, :MANDATORY, :BLOCK, :CURRENT, *PRIN-LINE-PREFIX*,
	*PRIN-MISERP*, *PRIN-PPRINTER*): new symbols
	* defs2.lisp (with-standard-io-syntax): bind *PRINT-MISER-WIDTH*
	and *PRINT-PPRINT-DISPATCH*
	* format.lisp (format-parse-cs): added ~_ and ~I instructions
	(format-pprint-newline, format-pprint-indent, current-indent):
	new functions
	(format-tabulate): do not ignore colon-modifier
	* init.lisp: export PPRINT symbols; load pprint.lisp
	* inspect.lisp (with-gensyms): moved to pprint.lisp
	* io.d (pretty_print_call): look into *PRINT-PPRINT-DISPATCH*
	(pr_enter_1): call it, instead of calling pr_xxx directly
	respect *PRIN-LINE-PREFIX*
	(pr_external_1): bind *PRINT-MISER-WIDTH* and
	*PRINT-PPRINT-DISPATCH*
	(PPRINT-INDENT, PPRINT-NEWLINE): implemented
	(pprint_lisp): new pr_routine_t helper
	(%PPRINT-LOGICAL-BLOCK): new function
	(WRITE, WRITE-TO-STRING): accept :MISER-WIDTH and :PPRINT-DISPATCH
	* lisparit.d (fehler_not_R): made global
	* lispbibl.d (init): added the prototype