@@ -1,3 +1,10 @@
+2001-08-21  Sam Steingold  <sds@gnu.org>
+
+	some symbols appeared in wrong packages - fix this
+	* international.lisp (textdomain, textdomaindir): use package
+	prefix before SET-TEXTDOMAIN and SET-TEXTDOMAINDIR
+	* clos.lisp (signature): import from COMPILER
+
 2001-08-20  Sam Steingold  <sds@gnu.org>
 
 	* loadform.lisp (mlf-unquote, mlf-init-function): new functions
